Adding /feed and /get hunger feature